Fixed some bugs

--- a/css/style.css
+++ b/css/style.css
@@ -575,7 +575,7 @@
 		padding: 4em 0 2em 0;
 		
 		/* background-color:		#2ecc71; */
-		background-image: url('images/greenmeadow.jpg');
+		background-image: url('Greenmeadow.jpg');
 		
 		
 		
