Fixed some bugs

--- a/css/style.css
+++ b/css/style.css
@@ -574,8 +574,8 @@
 		position: relative;
 		padding: 4em 0 2em 0;
 		
-		/* background-color:		#2ecc71; */
-		background-image: url('Greenmeadow.jpg');
+		 background-color:		#2ecc71; 
+		
 		
 		
 		
