--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@
 			header > p
 			{
 				display: block;
-				color: #f35858;
+				color: #2c3e50;
 				padding: 0.75em 0 1em 0;
 				font-size: 1.5em;
 				line-height: 1.5em;
